refactor: refactoring of student classes